--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
