--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
