--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon ./server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
